# dq-suite-amsterdam

./: .gitignore  CHANGELOG.md  README.md  dq profiling tables.sql  dq_rules_example.json  example_dq_suite_notebook.ipynb  geo_dq_rules_example.json  pyproject.toml  requirements.txt  teamIdrules.json  test_description_example.json  test_description_integration.py
.github/workflows/: github-ci.yml  publish-to-pypi.yml  run-unit-tests.yml
cicd/: azure-pipelines.yml
docs/: Readme-dev.md  Readme-other.md  Readme-prepare_input_json.md
scripts/: data_quality_tables.sql  example_notebook.py
share_rule_sets/: sleutel_is_niet_null.json
src/: Readme-dev.md
src/dq_suite/: __init__.py  common.py  df_checker.py  input_helpers.py  input_validator.py  other.py  output_helpers.py  output_transformations.py  profiling.py  rule_val.py  validation.py  validation_input.py
src/dq_suite/custom_renderers/: slack_renderer.py  teams_renderer.py
src/dq_suite/profile/: dq_rules_example_from_profiling.json  generic_rules.py  profile.py  report_transformations.py  rules_module.py  type_list.py
src/dq_suite/schemas/: afwijking.py  bronattribuut.py  brondataset.py  brontabel.py  pre_afwijking.py  pre_validatie.py  profilingattribuut.py  profilingtabel.py  regel.py  regel_id_input.py  team.py  validatie.py
src/dq_suite_amsterdam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dq_suite_gemeente_amsterdam.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/schemas/: validatie.py
tests/: __init__.py  conftest.py  test_common.py  test_df_checker.py  test_generic_rules.py  test_input_helpers.py  test_output_transformations.py  test_profile_generic_rules.py  test_profile_report_transformations.py  test_profile_rule_module.py  test_rule_module.py  test_validation.py  test_validation_input.py
tests/test_data/: dq_result.json  dq_rules.json  dq_rules_invalid_formatting.json  dq_rules_simple.json  test_schema.py
