[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dq-suite-amsterdam"
version = "0.6.1"
authors = [
  { name="Arthur Kordes", email="a.kordes@amsterdam.nl" },
  { name="Aysegul Cayir Aydar", email="a.cayiraydar@amsterdam.nl" },
  { name="Rajesh Chellaswamy", email="r.chellaswamy@amsterdam.nl" }
]
description = "Wrapper for Great Expectations to fit the requirements of the Gemeente Amsterdam."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "great_expectations"
]
