[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dq-suite-amsterdam"
version = "0.10.1"
authors = [
  { name="Arthur Kordes", email="a.kordes@amsterdam.nl" },
  { name="Aysegul Cayir Aydar", email="a.cayiraydar@amsterdam.nl" },
  { name="Rajesh Chellaswamy", email="r.chellaswamy@amsterdam.nl" },
  { name="Bas Schotten", email="b.schotten@amsterdam.nl" }
]
description = "Wrapper for Great Expectations to fit the requirements of the Gemeente Amsterdam."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "great_expectations==1.0.3",
  "pandas==2.1.4",
  "pyspark==3.5.2",
  "pyhumps==3.8.0",
  "pyyaml==6.0.2",
]


[project.optional-dependencies]
dev = [
    'bandit~=1.7',
    'black~=23.1',
    'pytest~=7.2',
    'mypy~=1.4.1',
    'pylint ~= 2.16',
    'autoflake ~= 2.0.1',
    'coverage ~= 7.6.1',
    'delta-spark ~= 3.2.0',
]

[tool.isort]
line_length = 80
profile = "black"
src_paths = ["src"]

[tool.black]
line-length = 80

[tool.autoflake]
recursive = 'true'
in-place = 'true'
remove-unused-variables = 'true'
remove-all-unused-imports = 'true'
quiet = 'true' # only report issues
